Added a build target to produce a Windows app-image using jpackage